[package]
name = "itsdangerous"
version = "0.1.0"
authors = ["Jake <jh@discordapp.com>"]
edition = "2018"
include = [
    "src/*.rs",
    "Cargo.toml",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/discordapp/itsdangerous-rs"
homepage = "https://github.com/discordapp/itsdangerous-rs"
documentation = "https://docs.rs/itsdangerous"
description = "Rust port of the popular itsdangerous python library for signing strings and sending them over untrusted channels."

[dependencies]
hmac = "0.7.0"
sha-1 = "0.8.1"
base64 = "0.10.1"
generic-array = "0.12.0"
typenum = "1.10.0"
serde = "1.0"
serde_json = "1.0"